stylesheets/screen.css
/* ... */
.dark-content-left {
  float: left;
  width: 530px;
}

.dark-content-left ul {margin: 0;}
.dark-content-right p {line-height: 1.4;}
.image-switcher, .homepage-carousel .jcarousel-item, .homepage-carousel ul li img {
  width: auto;
  padding: 15px;
  background: transparent url(/images/image-switcher.png) top left repeat-x;
  border-bottom: 1px solid #000;
  text-align: center;
}

.slide-frame{
  background: transparent url(/images/image-switcher.png) top left repeat-x;  
  border-bottom: 1px solid #000;  
  width: 500px;
  height: 372px;
  padding: 15px;
}

.homepage-carousel .jcarousel-item {
  width: 500px;
  height: 332px;
}

.project-carousel > li.jcarousel-item {
  display: block;
  width: 830px;
  height: 405px;
}

.jcarousel-clip-vertical {
  height: 405px;
}

.image-switcher-tools {
  padding: 15px 0;
}

.image-switcher-tools span {
  font-weight: bold;
  float: left;
  color: #656565;
}

.image-switcher-tools a {
  display: block;
  float: left;
  height: 26px;
  width: 24px;
  background: transparent url(/images/image-swticher-control.png) 0 -26px;
  overflow: hidden;
  text-indent: -5000px;
  margin: 0 6px 0 0px;
}

.image-switcher-tools a:hover {
    background: transparent url(/images/image-swticher-control.png) 0 -52px;
}

.image-switcher-tools a.activeSlide {
  background: transparent url(/images/image-swticher-control.png) 0 0px;
}

.project-nav {
  height: 455px;
  width: 41px;
  position: absolute;
  background: transparent url(/images/project-nav.png) 0 0 no-repeat;
  top: 42px;
  right: 1px;
  z-index: 99;
  padding: 8px 0 0 13px;
}


.project-nav a {
  display: block;
  width: 32px;
  height: 26px;
  text-align: center;
  font-weight: bold;
  font-size: 1.1em;
  background: transparent url(/images/project-nav-button.png) 0 0 no-repeat;
  margin: 0 0 5px 0;
  color: #232323;
  text-decoration: none;
  padding: 8px 0 0 0;
}

.project-nav a:hover {
 background: transparent url(/images/project-nav-button.png) -64px 0 no-repeat;  
}

.project-nav a.active {
  background: transparent url(/images/project-nav-button.png) -32px 0 no-repeat;
  color: #d4d4d4;
  text-shadow: 0px -1px #000;
}




/******************************
+ About Us 
******************************/

#three_columns {
  border-top: 1px solid #3d3832;
  padding: 20px 0 10px 0;
  color: #E6E0D9;
}

#three_columns #what_we_do {
  float: left;
  width: 245px;
  padding-right: 45px;
}

#three_columns #our_philosophy {
  float: left;
  width: 300px;
}

#three_columns #where_we_are {
  float: right;
  width: 245px;
}

#people {
  padding: 30px 0 0 0;
}


.person {
  width: 860px;
  padding: 20px 0 0 0;
  margin: 0 0 5px 0;
}


.person .hr {margin: 6px 0;}

.person-photo {
  width: 190px;
  height: 236px;
  float: left;
  background: transparent url(/images/photo-border.png) top left no-repeat;
  position: relative;
  left: -5px;
}
.person-photo img {
  position: relative;
  left: 16px;
  top: 12px;
  -moz-border-radius: 5px;
  -webkit-border-radius: 5px;
}

.person-info {
  width: 657px;
  padding: 10px 0 0 0;
  float: right;
}

.person-info h3 {
  color: #cacaca;
  font-size: 1.8em;
}

.person-info h4 {
  color: #7a7168;
  font-size: 1.1em;
  text-transform: none;
}

.person-info p {color: #e6e0d9;}

#positions-cont {
  clear: both;
  width: 880px;
}

.position {
  width: 273px;
  margin: 20px 30px 20px 0;
  float: left;
}

.position.last {
  margin-right: 0;
}

#sticker-logo {
  margin: 0 15px 10px 5px;
  width: 100px;
  height: 101px;
  float: left;
  background: url(/images/sticker-logo.png) 0px 0px no-repeat;
}

#addresses {
  position: relative;
  float: right;
  padding: 10px 0 0 30px;
  height: 550px;
  margin-bottom: -550px;
  background: url(/images/vr.png) 0px 0px repeat-y;
}

.contact-address {
  padding-bottom: 30px;
}

.contact-address h4 {

  font-size: 14px;
  margin: 0;
}

.contact-address p {

  margin: 0;
  font-size: 12px;
  line-height: 18px;
}

#contact_form {
  position: relative;
  left: -80px;
}

/***************************
+ Training Page
***************************/

#main_sell {
  font-size: 1em;
  font-weight: bold;
}

.dark-content p.passion {
  text-align: center;
  padding: 8px 0 0 0;
  margin: 0;
  font-family: georgia, times, serif;
  color: #9a8e82;
  font-style: italic;
}

#visit_training {
  padding: 0 0 10px 0 ;
}

#visit_training a{
  display: block;
  width: 332px;
  height: 86px;
  margin: 0 auto;
  background: transparent url(/images/visit-training.png) 0 0 no-repeat;
  text-indent: -5000px;
}

#visit_training a:hover {background: transparent url(/images/visit-training.png) 0 -86px no-repeat;}

.training-testimonial {
  background: url(/images/quote.png) 60px 5px no-repeat;
  padding: 10px 75px;
  margin: 20px 0;
  position: relative;
  line-height: 22px;
  font-size: 13px;
  float: left;
  width: 285px;
}

.training-testimonial .author {
  position: absolute;
  bottom: -20px;
  right: 100px;
  width: 300px;
  text-align: right;
  color: #c8a872;
}

.training-testimonial .author a {
  font-style: italic;
  font-weight: normal;
  color: #c8a872;
  font-size: 14px;
  font-family: Georgia, serif;
}

.photo_credit {
  margin: 20px 0 0 0;
  padding: 5px 10px;
  -moz-border-radius: 6px;
  -webkit-border-radius: 6px;
  font-size: .9em;
  background:transparent url(/images/dark-content.png) repeat-x scroll 0 0;
  color: #7A7168;
}

.photo_credit a {color: #7A7168;}
.photo_credit a:hover {color: #a1988e;}

